Redoc with new API

--- a/vignettes/articles/baba.Rmd
+++ b/vignettes/articles/baba.Rmd
@@ -35,11 +35,10 @@ In BABA, metrics are computed using points within a cell of size s (typically 20
 
 ```{r, fig.show='hold', fig.width=4}
 f <- system.file("extdata", "Megaplot.las", package="lasR")
-r = reader(f) 
 aba  = rasterize(20, "zmean")      # ABA
 baba = rasterize(c(5,20), "zmean") # BABA
-pipeline = r + aba + baba
-ans = processor(pipeline)
+pipeline = aba + baba
+ans = exec(pipeline, on = f)
 
 terra::plot(ans[[1]], col = col, main = "ABA")
 terra::plot(ans[[2]], col = col, main = "BABA")
@@ -53,11 +52,10 @@ This approach also enables the mapping of point density with a finer resolution,
 
 ```{r, fig.show='hold', fig.width=4}
 f <- system.file("extdata", "Topography.las", package="lasR")
-r <- reader(f)
 c1 <- rasterize(1, "count")
 c2  <- rasterize(c(1,4), "count")
-pipeline = r + c1 + c2
-res <- processor(pipeline)
+pipeline = c1 + c2
+res <- exec(pipeline, on = f)
 terra::plot(res[[1]]/4, col = gray.colors(15,0,1), main = "Regular")   # divide by 4 to get the density
 terra::plot(res[[2]]/25, col = gray.colors(15,0,1), main = "Moving windows")  # divide by 25 to get the density
 ```
