--- a/vignettes/lasR4.Rmd
+++ b/vignettes/lasR4.Rmd
@@ -114,8 +114,8 @@ chm = rasterize_canopy(ctg, 1, p2r())
 ### lasR
 
 ```r
-pipeline = reader(ctg) + rasterize(1, "max")
-processor(pipeline)
+pipeline = rasterize(1, "max")
+exec(pipeline, on = ctg)
 ```
 
 ### Result
@@ -145,8 +145,8 @@ dtm = rasterize_terrain(ctg, 1, tin())
 
 ```r
 tri = triangulate(filter = keep_ground())
-pipeline = reader(ctg, filter = keep_ground()) + tri + rasterize(1, tri)
-processor(pipeline)
+pipeline = reader_las(filter = keep_ground()) + tri + rasterize(1, tri)
+exec(pipeline, on = ctg)
 ```
 
 ### Result
@@ -175,12 +175,11 @@ den = rasterize_density(ctg, 5)
 
 ```r
 custom_function = function(z,i) { list(avgz = mean(z), avgi = mean(i)) }
-read = reader(folder)
 chm = rasterize(1, "max")
 met = rasterize(20, custom_function(Z, Intensity))
 den = rasterize(5, "count")
-pipeline = read + chm + met + den
-processor(pipeline)
+pipeline = chm + met + den
+exec(pipeline, on = folder)
 ```
 
 
@@ -198,7 +197,6 @@ In this complex pipeline, the point cloud is normalized and written to new files
 
 
 ```r
-read = reader(ctg)
 del = triangulate(filter = keep_ground())
 norm = transform_with(del)
 dtm = rasterize(1, del)
@@ -207,7 +205,7 @@ seed = local_maximum(3)
 tree = region_growing(chm, seed)
 write = write_las()
 pipeline = read + del + norm + write + dtm + chm +  seed + tree
-ans = processor(pipeline, progress = TRUE)
+ans = exec(pipeline, on = ctg, progress = TRUE)
 ```
 
 ```{r, warning=F, echo=-1, echo=FALSE, fig.show="hold", fig.width=4}
