--- a/vignettes/lasR4.Rmd
+++ b/vignettes/lasR4.Rmd
@@ -157,6 +157,16 @@ m_lidr = read_benchmarks("lidR", 2)
 plot_benchmark(m_lidr, m_lasr)
 ```
 
+The same with chunking option set to 1000 x 1000 m chunks using `exec(pipeline, ..., chunk = 1000)` and `opt_chunk_buffer(ctg) = 1000` to reduce the memory usage.
+
+```{r, warning=F, echo=-1, echo=FALSE, fig.show="hold", fig.width=4}
+m_lasr = list(NULL, read_benchmark("lasR_test_7_FFGG-1009803.data"))
+m_lidr = list(NULL, read_benchmark("lidR_test_7_FFGG-1009803.data"))
+plot_benchmark(m_lidr, m_lasr)
+```
+
+## Digital Terrain Model chunked
+
 ## Multiple raster
 
 The gain in terms of computation time is much more significant when running multiple stages in a single pipeline because files are read only once in `lasR` but multiple times in `lidR`. Here, all operations are executed in a single pass at the C++ level, resulting in more efficient memory management.
